use bootstrap grid approach

--- a/_site.yml
+++ b/_site.yml
@@ -1,8 +1,8 @@
-name: "Marine Olivari - Professeur de Danse"
+name: "Marine Olivari Professeur de Danse"
 output_dir: "docs"
 description: "Cours de Barre au Sol à Paris 15 75015"
 navbar:
-  title: "Marine Olivari - Professeur de Danse"
+  title: "Marine Olivari Professeur de Danse"
   type: inverse
   left:
     - text: "Accueil"
