--- a/_site.yml
+++ b/_site.yml
@@ -22,5 +22,6 @@ output:
     theme: cosmo
     highlight: textmate
     include:
+      in_header: header.html
       after_body: footer.html
     css: styles.css
